feat: almost there

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <img src="./image/pipe.png" class="pipe">
         <img src="./image/mario.gif" class="mario">
         <img src="./image/clouds.png" class="clouds">
+        <div class="score">
+            <p>SCORE</p>
+            <p class="number" value="on"></p> 
+        </div>
+        
     </div>
 </body>
 </html>
-<script src="./js/script.js"></script>
+<script src="./js/script.js"></script> 
