tentativa set time out

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <img src="./image/clouds.png" class="clouds">
         <div class="score">
             <p>SCORE</p>
-            <p class="number" value="on"></p> 
+            <p class="number" value="undefinned"></p> 
         </div>
-        
+        <button class="btn" value="start">Start</button>
     </div>
 </body>
 </html>
